--- a/src/style.css
+++ b/src/style.css
@@ -348,8 +348,9 @@ button:focus {
   padding-top: 50px;
   font-size: 1.2em !important;
   text-align: left;
-  font-family: 'CustomFont', sans-serif;
-  letter-spacing: 0.03em;
+  font-family: 'CustomFont';
+  letter-spacing: 0.04em;
+  font-weight: 300;
 }
 
 .home-about-social {
@@ -476,6 +477,7 @@ button:focus {
   padding-left: 25px !important;
   padding-right: 25px !important;
   height: auto !important;
+  font-weight: 300;
 }
 
 .project-card-view {
